# intro-to-game-dev

./: .gitignore  .travis.yml  CMakeLists.txt  CODING_STYLE.md  README.md  TODO.md  game.m.cpp  test.m.cpp
src/engine/containers/: dynamic_array.cpp  dynamic_array.cxx  dynamic_array.h  map.cpp  map.h  maps.cpp  maps.h  node.cpp  node.h
src/engine/data/: json_array.cpp  json_array.h  json_entity.cpp  json_entity.h  json_object.cpp  json_object.h  json_parser.cpp  json_parser.h  json_primitive.cpp  json_primitive.h  token.cpp  token.h  token_primitive.cpp  token_primitive.h
src/engine/event/: event_bus.cpp  event_bus.h  event_dispatcher.cpp  event_dispatcher.h  ievent.cpp  ievent.h
src/engine/input/: input.cpp  input.h  input_type.def  input_type.h
src/engine/memory/: counting_allocator.cpp  counting_allocator.cxx  counting_allocator.h  default_allocator.cpp  default_allocator.cxx  default_allocator.h  iallocator.cpp  iallocator.h  stack_guard.cpp  stack_guard.h
src/engine/rendering/: renderable_sprite.cpp  renderable_sprite.h  renderer.cpp  renderer.h
src/engine/scene/: box_collider.cpp  box_collider.h  iactor.cpp  iactor.h  icollider.cpp  icollider.h  icontroller.cpp  icontroller.h  itickable.cpp  itickable.h  nxn_scene_graph.cpp  nxn_scene_graph.h  rectangle_bounds.cpp  rectangle_bounds.h  scene.cpp  scene.h
src/exception/: invalid_json.cpp  invalid_json.h
src/game/actors/: non_player_actor.cpp  non_player_actor.h  player_actor.cpp  player_actor.h
src/game/controllers/: non_player_controller.cpp  non_player_controller.h  player_controller.cpp  player_controller.h
src/game/factories/: non_player_actor_factory.cpp  non_player_actor_factory.h  player_actor_factory.cpp  player_actor_factory.h
tests/: counting_allocator_tests.h  default_allocator_tests.h  dynamic_array_tests.h  map_tests.h  maps_tests.h
tests/engine/containers/: dynamic_array_tests.cpp  dynamic_array_tests.h  map_tests.cpp  map_tests.h
tests/engine/data/: json_parser.cpp  json_parser.h
tests/engine/input/: input_tests.cpp  input_tests.h
tests/engine/memory/: counting_allocator_tests.cpp  counting_allocator_tests.h  default_allocator_tests.cpp  default_allocator_tests.h  stack_guard_tests.h
tests/engine/scene/: rectangle_bounds_tests.cpp  rectangle_bounds_tests.h
